--- a/di-19-zhang-wen-xue-gu-shi/19.7.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.7.md
@@ -96,6 +96,8 @@ Gentoo [自称](https://www.gentoo.org/get-started/about/)是“元发行版（_
 
 简而言之，Gentoo 用自己的哲学捆绑了用户，简单问题复杂化，自己折磨自己；USE 过于复杂，对于一些常用软件，都经常出现循环依赖问题，破坏系统稳定性，软件安装升级卸载困难。如果说 Arch Linux 是滚着滚着就挂了，那么 Gentoo Linux 则是根本不让你滚，你想滚也滚不动。一旦过了几天乃至几星期，你就再也不需要滚动了——你再也动不了任何软件了，无论是卸载、安装还是更新。复杂的 USE，以致于每天都在用 Gentoo 的人也在和这套哲学体系搏斗。Gentoo 社区的日常话题就是依赖问题如何解决。
 
+Gentoo 哲学和 C++ 哲学有异曲同工之妙：C++ 是一种语言，而不是一个完整的系统。为每种应该支持的风格提供全面支持，**不试图去强迫别人做什么。**“如果工具 **强迫用户** 按照特定的方式操作，那么工具实际上是在与用户对抗，而不是为用户服务。**我们都经历过工具强加自己意愿的情况。** 这是错误的，违背了 Gentoo 的哲学。”正如世界上无人敢声称自己熟练掌握 C++ 一样，Gentoo 亦如此。自由的选择固然是人类向往的本性，但也带给人们无尽的焦虑和抑郁。
+
 Gentoo 平台几乎没有任何 Bug 跟踪回馈机制。对于使系统完全没法用的包管理器 app-portage/layman 的相关 Bug，他们只会在七八年后，那个软件被删除时告诉你问题不存在了。或者在 [3 年后](https://bugs.gentoo.org/700744)再回复你。他们这个 Bug 报告平台非常难用。各种搜索不到。虽然看上去是和 FreeBSD 用的是一个平台，但还不如直接谷歌“xxx site:bugs.gentoo.org”。现在你去他的 Bug 报告平台[去搜](https://bugs.gentoo.org/buglist.cgi?quicksearch=app-portage%2Flayman&list_id=7231000)“app-portage/layman”，居然是“Zarro Boogs found.（没有找到任何 Bug）”。~~果然看不到问题就是没有了吗。~~ [高级搜索](https://bugs.gentoo.org/query.cgi)也一样乱七八糟，找不到泛查询。
 
 ## Deepin/UOS/中标麒麟
@@ -145,5 +147,6 @@ Arch Linux 官方源里基本上没有什么软件，不导入 aur 源（ Arch U
 ## 参考文献
 
 - [Benefits of Gentoo](https://wiki.gentoo.org/wiki/Benefits_of_Gentoo)
-- [The philosophy of Gentoo](https://www.gentoo.org/get-started/philosophy/)
+- [The philosophy of Gentoo](https://www.gentoo.org/get-started/philosophy/)，Gentoo 设计哲学
 - [Arch compared to other distributions](https://wiki.archlinux.org/title/Arch_compared_to_other_distributions)，翻译[在这里](https://wiki.archlinuxcn.org/wiki/Arch_%E4%B8%8E%E5%85%B6%E4%BB%96%E5%8F%91%E8%A1%8C%E7%89%88%E7%9A%84%E6%AF%94%E8%BE%83)
+- 《C++ 语言的设计和演化》，[美] Bjarne Stroustrup，译者: 裘宗燕，人民邮电出版社，ISBN 9787115497116
