--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -4,6 +4,8 @@
 >
 > 本书中所有 `grub` 均为 `grub2`。
 
+## Grub
+
 目前测试 `grub` 无法直接引导 FreeBSD 的内核从而启动系统。只能采取 `chainlain+1` 的方式间接引导。
 
 ```sh
@@ -13,7 +15,7 @@ chainloader /boot/boot1.efi
 }
 ```
 
-参考资料:
+### 参考资料
 
 - [Working GRUB configuration for UEFI booting FreeBSD](https://unix.stackexchange.com/questions/354260/working-grub-configuration-for-uefi-booting-freebsd)
 - [Trying to boot FBSD13 via grub2](https://www.reddit.com/r/freebsd/comments/q4qgq9/trying_to_boot_fbsd13_via_grub2/)
@@ -24,3 +26,71 @@ chainloader /boot/boot1.efi
 # grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
 grub-install: error: relocation 0x4 is not implemented yet.
 ```
+
+## UEFI 与 efibootmgr
+
+- 查看当前启动项：
+
+```sh
+root@ykla:/home/ykla # efibootmgr
+Boot to FW : false
+BootCurrent: 0001
+Timeout    : 1 seconds
+BootOrder  : 0002, 0003, 0000, 0001
+ Boot0002* Windows Boot Manager
+ Boot0003* UEFI OS
+ Boot0000* refind
++Boot0001* freebsd # + 为默认启动项
+```
+
+详细说明：
+
+```
+root@ykla:/home/ykla # efibootmgr -v
+Boot to FW : false
+BootCurrent: 0001
+Timeout    : 1 seconds
+BootOrder  : 0002, 0003, 0000, 0001
+ Boot0002* Windows Boot Manager HD(1,GPT,dd850df0-4bc5-11eb-9e72-1002b5860b22,0x28,0x8a7d8)/File(\EFI\Microsoft\Boot\bootmgfw.efi)
+                                   nda0p1:/EFI/Microsoft/Boot/bootmgfw.efi (null)
+ Boot0003* UEFI OS HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)/File(\EFI\BOOT\BOOTX64.EFI)
+                      gpt/efiboot0:/EFI/BOOT/BOOTX64.EFI /boot/efi//EFI/BOOT/BOOTX64.EFI
+ Boot0000* refind HD(1,GPT,dd850df0-4bc5-11eb-9e72-1002b5860b22,0x28,0x8a7d8)/File(\EFI\refind\refind_x64.efi)
+                     nda0p1:/EFI/refind/refind_x64.efi (null)
++Boot0001* freebsd HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)/File(\efi\freebsd\loader.efi)
+                      gpt/efiboot0:/efi/freebsd/loader.efi /boot/efi//efi/freebsd/loader.efi
+
+
+Unreferenced Variables:
+ Boot0005* UEFI OS HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)/File(\EFI\BOOT\BOOTX64.EFI)
+                      gpt/efiboot0:/EFI/BOOT/BOOTX64.EFI /boot/efi//EFI/BOOT/BOOTX64.EFI
+ Boot0004* UEFI: KingstonDataTraveler 3.00000, Partition 1 PciRoot(0x0)/Pci(0x14,0x0)/USB(0x2,0x0)/HD(1,MBR,0x90909090,0x1,0x10418)
+                                                          VenHw(2d6447ef-3bc9-41a0-ac19-4d51d01b4ce6,4500300044003500350045004100350033003500390043003100370035003000390038003900420030003700460036000000)
+
+
+```
+
+- 设置 refind 优先启动（这不意味着他是默认启动项，这是改变在 BIOS 中的排序罢了）：
+
+>**警告**
+>
+>不可 `efibootmgr -o 0000` 如此指定。这样做，会删除其他启动项。
+
+```sh
+root@ykla:/home/ykla # efibootmgr -o 0000,0001,0002,0003
+Boot to FW : false
+BootCurrent: 0001
+Timeout    : 1 seconds
+BootOrder  : 0000, 0001, 0002, 0003
+ Boot0000* refind
++Boot0001* freebsd
+ Boot0002* Windows Boot Manager
+ Boot0003* UEFI OS
+```
+
+
+### 参考文献
+
+* [efibootmgr 无法添加 UEFI 启动项](https://bbs.archlinuxcn.org/viewtopic.php?id=12914)，这个简明扼要
+* [efibootmgr(8)](https://man.freebsd.org/cgi/man.cgi?efibootmgr(8))，FreeBSD man 手册，英文
+* [深入掌握 efibootmgr 操作要领安全删除启动项方法解析](https://my.oschina.net/emacs_8861834/blog/17450288)，详细说明，但并非都适用于 BSD
