--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -20,7 +20,7 @@ chainloader /boot/boot1.efi
 - [Working GRUB configuration for UEFI booting FreeBSD](https://unix.stackexchange.com/questions/354260/working-grub-configuration-for-uefi-booting-freebsd)
 - [Trying to boot FBSD13 via grub2](https://www.reddit.com/r/freebsd/comments/q4qgq9/trying_to_boot_fbsd13_via_grub2/)
 
-目前配置的报错报错(grub2-efi FBSD 13.1)：
+目前配置的报错报错（grub2-efi FBSD 13.1）：
 
 ```sh
 # grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
@@ -45,7 +45,7 @@ BootOrder  : 0002, 0003, 0000, 0001
 
 详细说明：
 
-```
+```sh
 root@ykla:/home/ykla # efibootmgr -v
 Boot to FW : false
 BootCurrent: 0001
