--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -1,17 +1,34 @@
 # 第 18.9 节 Radxa X4
 
-Radxa X4 是 x86 开发版，处理器是英特尔 N100。
+Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 16G 内存 + 128 emmc 款。
+
+请安装 FreeBSD 15.0-CURRENT。FreeBSD 14.2-RELEASE 会有奇怪的 bug：若使用 emmc 款（且 FreeBSD 系统安装到 emmc 中），则固态硬盘的分区不能超过 5 个，否则 zfs 无法启动。
+
+安装显卡驱动：
 
 ```sh
-root@ykla:~ # dmesg
+# pkg install drm-61-kmod
+```
+
+安装无线网卡驱动：
+
+```sh
+# pkg install wifi-firmware-rtw89-kmod
+```
+
+安装上述驱动后，查看启动详情：
+
+```sh
 ---<<BOOT>>---
-Copyright (c) 1992-2023 The FreeBSD Project.
+Copyright (c) 1992-2025 The FreeBSD Project.
 Copyright (c) 1979, 1980, 1983, 1986, 1988, 1989, 1991, 1992, 1993, 1994
 	The Regents of the University of California. All rights reserved.
 FreeBSD is a registered trademark of The FreeBSD Foundation.
-FreeBSD 14.2-RELEASE releng/14.2-n269506-c8918d6c7412 GENERIC amd64
-FreeBSD clang version 18.1.6 (https://github.com/llvm/llvm-project.git llvmorg-18.1.6-0-g1118c2e05e67)
-VT(efifb): resolution 1024x600
+FreeBSD 15.0-CURRENT #0 main-n275588-045a4c108fcf: Fri Feb 21 02:25:56 UTC 2025
+    root@releng3.nyi.freebsd.org:/usr/obj/usr/src/amd64.amd64/sys/GENERIC amd64
+FreeBSD clang version 19.1.7 (https://github.com/llvm/llvm-project.git llvmorg-19.1.7-0-gcd708029e0b2)
+WARNING: WITNESS option enabled, expect reduced performance.
+VT(efifb): resolution 800x600
 CPU: Intel(R) N100 (806.40-MHz K8-class CPU)
   Origin="GenuineIntel"  Id=0xb06e0  Family=0x6  Model=0xbe  Stepping=0
   Features=0xbfebfbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR,PGE,MCA,CMOV,PAT,PSE36,CLFLUSH,DTS,ACPI,MMX,FXSR,SSE,SSE2,SS,HTT,TM,PBE>
@@ -26,7 +43,7 @@ CPU: Intel(R) N100 (806.40-MHz K8-class CPU)
   VT-x: PAT,HLT,MTF,PAUSE,EPT,UG,VPID,VID,PostIntr
   TSC: P-state invariant, performance statistics
 real memory  = 17179869184 (16384 MB)
-avail memory = 16351014912 (15593 MB)
+avail memory = 16318308352 (15562 MB)
 Event timer "LAPIC" quality 600
 ACPI APIC Table: <ALASKA A M I >
 WARNING: L3 data cache covers more APIC IDs than a package (7 > 3)
@@ -36,19 +53,19 @@ random: registering fast source Intel Secure Key RNG
 random: fast provider: "Intel Secure Key RNG"
 random: unblocking device.
 ioapic0 <Version 2.0> irqs 0-119
-Launching APs: 2 3 1
+Launching APs: 2 1 3
 random: entropy device external interface
 kbd0 at kbdmux0
 efirtc0: <EFI Realtime Clock>
 efirtc0: registered as a time-of-day clock, resolution 1.000000s
-smbios0: <System Management BIOS> at iomem 0x75ca7000-0x75ca701e
-smbios0: Version: 3.6, BCD Revision: 3.6
+smbios0: <System Management BIOS> at iomem 0x75ca6000-0x75ca6017
+smbios0: Version: 3.6
 aesni0: <AES-CBC,AES-CCM,AES-GCM,AES-ICM,AES-XTS,SHA1,SHA256>
 acpi0: <ALASKA A M I >
-Firmware Error (ACPI): Could not resolve symbol [\134_SB.PC00.TXHC.RHUB.SS01], AE_NOT_FOUND (20221020/dswload2-315)
-ACPI Error: AE_NOT_FOUND, During name lookup/catalog (20221020/psobject-372)
-Firmware Error (ACPI): Could not resolve symbol [\134_SB.PC00.TXHC.RHUB.SS02], AE_NOT_FOUND (20221020/dswload2-315)
-ACPI Error: AE_NOT_FOUND, During name lookup/catalog (20221020/psobject-372)
+Firmware Error (ACPI): Could not resolve symbol [\134_SB.PC00.TXHC.RHUB.SS01], AE_NOT_FOUND (20241212/dswload2-315)
+ACPI Error: AE_NOT_FOUND, During name lookup/catalog (20241212/psobject-372)
+Firmware Error (ACPI): Could not resolve symbol [\134_SB.PC00.TXHC.RHUB.SS02], AE_NOT_FOUND (20241212/dswload2-315)
+ACPI Error: AE_NOT_FOUND, During name lookup/catalog (20241212/psobject-372)
 acpi0: Power Button (fixed)
 hpet0: <High Precision Event Timer> iomem 0xfed00000-0xfed003ff on acpi0
 Timecounter "HPET" frequency 19200000 Hz quality 950
@@ -83,6 +100,27 @@ pci0: <memory, RAM> at device 20.2 (no driver attached)
 pci0: <simple comms> at device 22.0 (no driver attached)
 sdhci_pci0: <Generic SD HCI> mem 0x6001149000-0x6001149fff at device 26.0 on pci0
 sdhci_pci0: 1 slot(s) allocated
+uma_zalloc_debug: zone "malloc-16" with the following non-sleepable locks held:
+exclusive sleep mutex SD slot mtx (sdhci) r = 0 (0xfffff80001ad9020) locked @ /usr/src/sys/dev/sdhci/sdhci.c:688
+stack backtrace:
+#0 0xffffffff80bcc76c at witness_debugger+0x6c
+#1 0xffffffff80bcd980 at witness_warn+0x430
+#2 0xffffffff80f05784 at uma_zalloc_debug+0x34
+#3 0xffffffff80f052d7 at uma_zalloc_arg+0x27
+#4 0xffffffff80b27bdd at malloc+0x7d
+#5 0xffffffff80b28592 at reallocf+0x12
+#6 0xffffffff80b9367d at devclass_add_device+0x1cd
+#7 0xffffffff80b91c2b at make_device+0x10b
+#8 0xffffffff80b91a6d at device_add_child_ordered+0x2d
+#9 0xffffffff8086f42c at sdhci_card_task+0x1fc
+#10 0xffffffff80875021 at sdhci_pci_attach+0x491
+#11 0xffffffff80b93e8b at device_attach+0x45b
+#12 0xffffffff80b951fa at bus_attach_children+0x4a
+#13 0xffffffff8082ba77 at pci_attach+0xd7
+#14 0xffffffff80f52775 at acpi_pci_attach+0x15
+#15 0xffffffff80b93e8b at device_attach+0x45b
+#16 0xffffffff80b951fa at bus_attach_children+0x4a
+#17 0xffffffff80f55ad8 at acpi_pcib_acpi_attach+0x428
 mmc0: <MMC/SD bus> on sdhci_pci0
 pcib1: <ACPI PCI-PCI bridge> at device 28.0 on pci0
 pci1: <ACPI PCI bus> on pcib1
@@ -115,23 +153,28 @@ atrtc0: registered as a time-of-day clock, resolution 1.000000s
 atrtc0: Can't map interrupt.
 atrtc0: non-PNP ISA device will be removed from GENERIC in FreeBSD 15.
 hwpstate_intel0: <Intel Speed Shift> on cpu0
+cpufreq0: <CPU frequency control> on cpu0
 hwpstate_intel1: <Intel Speed Shift> on cpu1
+cpufreq1: <CPU frequency control> on cpu1
 hwpstate_intel2: <Intel Speed Shift> on cpu2
+cpufreq2: <CPU frequency control> on cpu2
 hwpstate_intel3: <Intel Speed Shift> on cpu3
-Timecounter "TSC" frequency 806401108 Hz quality 1000
+cpufreq3: <CPU frequency control> on cpu3
+Timecounter "TSC" frequency 806401362 Hz quality 1000
 Timecounters tick every 1.000 msec
 ugen1.1: <Intel XHCI root HUB> at usbus1
-ZFS filesystem version: 5
-ZFS storage pool version: features support (5000)
+ugen0.1: <Intel XHCI root HUB> at usbus0
 uhub0 on usbus1
 uhub0: <Intel XHCI root HUB, class 9/0, rev 3.00/1.00, addr 1> on usbus1
-ugen0.1: <Intel XHCI root HUB> at usbus0
 uhub1 on usbus0
 uhub1: <Intel XHCI root HUB, class 9/0, rev 3.00/1.00, addr 1> on usbus0
+ZFS filesystem version: 5
+ZFS storage pool version: features support (5000)
 mmcsd0: 125GB <MMCHC Y2P128 0.0 SN F034273C MFG 04/2023 by 155 0x0000> at mmc0 200.0MHz/8bit/8192-block
 mmcsd0boot0: 4MB partition 1 at mmcsd0
 mmcsd0boot1: 4MB partition 2 at mmcsd0
 mmcsd0rpmb: 17MB partition 3 at mmcsd0
+uhub1: 2 ports with 2 removable, self powered
 nvme0: Allocated 16MB host memory buffer
 hdacc0: <Realtek ALC269 HDA CODEC> at cad 0 on hdac0
 hdaa0: <Realtek ALC269 Audio Function Group> at nid 1 on hdacc0
@@ -142,238 +185,29 @@ nda0: Serial Number FX240960178
 nda0: nvme version 1.4
 nda0: 476940MB (976773168 512 byte sectors)
 Trying to mount root from zfs:zroot/ROOT/default []...
-uhub1: 2 ports with 2 removable, self powered
+WARNING: WITNESS option enabled, expect reduced performance.
 uhub0: 16 ports with 16 removable, self powered
 Root mount waiting for: usbus1
-ugen1.2: <SIGMACHIP USB Keyboard> at usbus1
-ukbd0 on uhub0
-ukbd0: <SIGMACHIP USB Keyboard, class 0/0, rev 1.10/1.10, addr 1> on usbus1
-kbd1 at ukbd0
-ugen1.3: <Realtek Bluetooth Radio> at usbus1
+ugen1.2: <Realtek Bluetooth Radio> at usbus1
 ichsmb0: <Intel Alder Lake SMBus controller> port 0xefa0-0xefbf mem 0x6001148000-0x60011480ff at device 31.4 on pci0
 smbus0: <System Management Bus> on ichsmb0
 rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
-rtw890: <rtw89_8852be> port 0x3000-0x30ff mem 0x80800000-0x808fffff at device 0.0 on pci1
-rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw8852b_fw-1.bin either
-rtw89/rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1.bin either
-rtw89_rtw8852b_fw-1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw-1_bin either
-rtw89_rtw8852b_fw_1_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_1_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw-1.bin'
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to early request firmware: -2
-rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw8852b_fw.bin either
-rtw89/rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89/rtw8852b_fw.bin either
-rtw89_rtw8852b_fw.bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw.bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw89_rtw8852b_fw_bin: could not load binary firmware /boot/firmware/rtw89_rtw8852b_fw_bin either
-rtw890: could not load firmware image 'rtw89/rtw8852b_fw.bin'
-rtw890: failed to wait firmware completion
-rtw890: failed to setup chip information
-device_attach: rtw890 attach returned 22
+rtw890: successfully loaded firmware image 'rtw89/rtw8852b_fw-1.bin'
+rtw890: loaded firmware rtw89/rtw8852b_fw-1.bin
+rtw890: Firmware version 0.29.29.5 (da87cccd), cmd version 0, type 5
+rtw890: Firmware version 0.29.29.5 (da87cccd), cmd version 0, type 3
+rtw890: chip rfe_type is 5
 acpi_wmi0: <ACPI-WMI mapping> on acpi0
 acpi_wmi0: cannot find EC device
 acpi_wmi0: Embedded MOF found
-ACPI: \134_SB.WFDE.WQCC: 1 arguments were passed to a non-method ACPI object (Buffer) (20221020/nsarguments-361)
+ACPI: \134_SB.WFDE.WQCC: 1 arguments were passed to a non-method ACPI object (Buffer) (20241212/nsarguments-361)
 acpi_wmi1: <ACPI-WMI mapping> on acpi0
 acpi_wmi1: cannot find EC device
 acpi_wmi1: Embedded MOF found
-ACPI: \134_SB.WFTE.WQCC: 1 arguments were passed to a non-method ACPI object (Buffer) (20221020/nsarguments-361)
-igc0: link state changed to UP
+ACPI: \134_SB.WFTE.WQCC: 1 arguments were passed to a non-method ACPI object (Buffer) (20241212/nsarguments-361)
 lo0: link state changed to UP
-igc0: link state changed to DOWN
-uhid0 on uhub0
-uhid0: <SIGMACHIP USB Keyboard, class 0/0, rev 1.10/1.10, addr 1> on usbus1
-ubt0 on uhub0
-ubt0: <Realtek Bluetooth Radio, class 224/1, rev 1.00/0.00, addr 2> on usbus1
 igc0: link state changed to UP
+ubt0 on uhub0
+ubt0: <Realtek Bluetooth Radio, class 224/1, rev 1.00/0.00, addr 1> on usbus1
 Security policy loaded: MAC/ntpd (mac_ntpd)
 ```
