--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -2,21 +2,26 @@
 
 Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 16G 内存 + 128G emmc 款。
 
-请安装 FreeBSD 15.0-CURRENT。FreeBSD 14.2-RELEASE 会有奇怪的 bug：若使用 emmc 款（且 FreeBSD 系统安装到 emmc 中），则固态硬盘的分区不能超过 5 个，否则 zfs 无法启动。
+请安装 FreeBSD 15.0-CURRENT。
 
-安装显卡驱动：
+- FreeBSD 14.2-RELEASE 会有奇怪的 bug：若使用 emmc 款（且 FreeBSD 系统安装到 emmc 中），则固态硬盘的分区不能超过 5 个，否则 zfs 无法启动。
+- FreeBSD 14.0 无法睿频变频
+
+---
+
+- 安装显卡驱动：
 
 ```sh
 # pkg install drm-61-kmod
 ```
 
-安装无线网卡驱动：
+- 安装无线网卡驱动：
 
 ```sh
 # pkg install wifi-firmware-rtw89-kmod
 ```
 
-安装上述驱动后，查看启动详情：
+- 安装上述驱动后，查看启动详情：
 
 ```sh
 ---<<BOOT>>---
@@ -211,3 +216,36 @@ ubt0 on uhub0
 ubt0: <Realtek Bluetooth Radio, class 224/1, rev 1.00/0.00, addr 1> on usbus1
 Security policy loaded: MAC/ntpd (mac_ntpd)
 ```
+
+- 读取 CPU 温度：
+
+```sh
+root@ykla:/home/ykla # kldload coretemp # 英特尔加载 coretemp，AMD 请参照参考文献
+root@ykla:/home/ykla # sysctl -a | grep temperature
+hw.acpi.thermal.tz0.temperature: 27.9C # 这个值不代表 CPU 温度，一般是主板温度
+dev.cpu.3.temperature: 41.0C
+dev.cpu.2.temperature: 40.0C
+dev.cpu.1.temperature: 40.0C
+dev.cpu.0.temperature: 40.0C
+```
+
+```sh
+root@ykla:/home/ykla # sysctl dev.cpu | grep temperature
+dev.cpu.3.temperature: 30.0C
+dev.cpu.2.temperature: 30.0C
+dev.cpu.1.temperature: 29.0C
+dev.cpu.0.temperature: 30.0C
+```
+
+疑问：为什么温度不一样？
+
+- 持久化温度设定（便于 htop 等软件使用），编辑 `/boot/loader.conf` 写入：
+
+```sh
+coretemp_load="YES"
+```
+
+## 参考文献
+
+- [coretemp](https://man.freebsd.org/cgi/man.cgi?coretemp)，官方 man 手册
+- [FreeBSD find CPU (processor) temperature command](https://www.cyberciti.biz/faq/freebsd-determine-processor-cpu-temperature-command/)，读取 CPU 温度
