--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -5,7 +5,7 @@ Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 
 请安装 FreeBSD 15.0-CURRENT。
 
 - FreeBSD 14.2-RELEASE 会有奇怪的 bug：若使用 emmc 款（且 FreeBSD 系统安装到 emmc 中），则固态硬盘的分区不能超过 5 个，否则 zfs 无法启动。
-- FreeBSD 14.0 无法睿频变频
+- FreeBSD 14.2-RELEASE 似乎无法睿频变频
 
 ---
 
