--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -220,7 +220,7 @@ Security policy loaded: MAC/ntpd (mac_ntpd)
 - 读取 CPU 温度：
 
 ```sh
-root@ykla:/home/ykla # kldload coretemp # 英特尔加载 coretemp，AMD 请参照参考文献
+root@ykla:/home/ykla # kldload coretemp # 英特尔加载 coretemp，AMD 请使用 amdtemp
 root@ykla:/home/ykla # sysctl -a | grep temperature
 hw.acpi.thermal.tz0.temperature: 27.9C # 这个值不代表 CPU 温度，一般是主板温度
 dev.cpu.3.temperature: 41.0C
@@ -247,5 +247,6 @@ coretemp_load="YES"
 
 ## 参考文献
 
-- [coretemp](https://man.freebsd.org/cgi/man.cgi?coretemp)，官方 man 手册
+- [coretemp](https://man.freebsd.org/cgi/man.cgi?coretemp)，官方 man 手册，英特尔看这个
+- [amdtemp](https://man.freebsd.org/cgi/man.cgi?amdtemp)，官方 man 手册，AMD 看这个
 - [FreeBSD find CPU (processor) temperature command](https://www.cyberciti.biz/faq/freebsd-determine-processor-cpu-temperature-command/)，读取 CPU 温度
