--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -7,7 +7,7 @@ Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 
 - FreeBSD 14.2-RELEASE 会有奇怪的 bug：若使用 emmc 款（且 FreeBSD 系统安装到 emmc 中），则固态硬盘的分区不能超过 5 个，否则 zfs 无法启动。
 - FreeBSD 14.2-RELEASE 似乎无法睿频变频
 
----
+## 安装驱动
 
 - 安装显卡驱动：
 
@@ -21,7 +21,9 @@ Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 
 # pkg install wifi-firmware-rtw89-kmod
 ```
 
-- 安装上述驱动后，查看启动详情：
+## Radxa X4 FreeBSD 15.0 dmesg
+
+安装上述驱动后，查看启动详情：
 
 ```sh
 ---<<BOOT>>---
@@ -217,7 +219,9 @@ ubt0: <Realtek Bluetooth Radio, class 224/1, rev 1.00/0.00, addr 1> on usbus1
 Security policy loaded: MAC/ntpd (mac_ntpd)
 ```
 
-- 读取 CPU 温度：
+## CPU 温度
+
+### 读取 CPU 温度：
 
 ```sh
 root@ykla:/home/ykla # kldload coretemp # 英特尔加载 coretemp，AMD 请使用 amdtemp
@@ -239,13 +243,15 @@ dev.cpu.0.temperature: 30.0C
 
 疑问：为什么温度不一样？
 
-- 持久化温度设定（便于 htop 等软件使用），编辑 `/boot/loader.conf` 写入：
+### 持久化温度设定
+
+为便于 htop 等软件使用，编辑 `/boot/loader.conf` 写入：
 
 ```sh
 coretemp_load="YES"
 ```
 
-## 参考文献
+### 参考文献
 
 - [coretemp](https://man.freebsd.org/cgi/man.cgi?coretemp)，官方 man 手册，英特尔看这个
 - [amdtemp](https://man.freebsd.org/cgi/man.cgi?amdtemp)，官方 man 手册，AMD 看这个
