第 17.5 节 MySQL 8.X 新增 MySQL 8.4 LTS

--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
@@ -1,8 +1,11 @@
 # 第 17.5 节 MySQL 8.X
 
-## mysql 80
 
-### 安装
+## 安装
+
+### MySQL 8.0 LTS
+
+安装：
 
 ```sh
 # pkg install mysql80-server
@@ -15,16 +18,55 @@
 # make install clean
 ```
 
-### 启动服务
+
+
+### MySQL 8.4 LTS
+
+安装：
+
+```sh
+# pkg install mysql84-server
+```
+
+或编译安装：
+
+```sh
+# cd /usr/ports/databases/mysql84-server/ 
+# make install clean
+```
+
+查看安装后说明（8.0 类似）：
+
+```sh
+root@ykla:~ # pkg info -D mysql84-server
+mysql84-server-8.4.3_1:
+On install:
+There is no initial password for first time use of MySQL. # 即无密码
+Keep in mind to reset it to a secure password.
+
+MySQL 8.4 has a default /usr/local/etc/mysql/my.cnf,
+remember to replace it with your own
+or set `mysql_optfile="$YOUR_CNF_FILE` in rc.conf.
+
+On upgrade:
+As of MySQL 8.0.16, the MySQL server performs the upgrade tasks previously
+handled by mysql_upgrade. Consequently, mysql_upgrade is unneeded and is
+deprecated as of that version, and will be removed in a future MySQL version.
+Because mysql_upgrade no longer performs upgrade tasks,
+it exits with status 0 unconditionally.
+```
+
+#### 启动服务
 
 ```sh
 # sysrc mysql_enable="YES"
 # service  mysql-server start
+Starting mysql.
 ```
 
-### 登录
+## 登录
 
-mysql 8.0 默认密码是空，直接回车即可。
+根据安装后说明，mysql 8.0、8.4 默认密码为空，直接回车即可。
 
 ```sql
 root@ykla:~ # mysql -uroot -p
@@ -44,7 +86,7 @@ Type 'help;' or 'h' for help. Type 'c' to clear the current input statement.
 root@localhost [(none)]>
 ```
 
-### 修改密码
+## 修改密码
 
 设置密码为 `z`，然后刷新权限。
 
