--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
@@ -56,7 +56,7 @@ Because mysql_upgrade no longer performs upgrade tasks,
 it exits with status 0 unconditionally.
 ```
 
-#### 启动服务
+## 启动服务
 
 ```sh
 # sysrc mysql_enable="YES"
