补充配置文件

--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -77,3 +77,7 @@ You can opt-out by running the disableTelemetry() command.
 
 test>
 ```
+
+## 配置文件
+
+MongoDB 80 配置文件位于 `/usr/local/etc/mongodb.conf`，配置模板在 `/usr/local/etc/mongodb.conf.sample`。
