--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
@@ -130,3 +130,24 @@ root@localhost [(none)]> show databases;
 
 root@localhost [(none)]>
 ```
+
+## 配置文件
+
+默认的配置文件模板位于 `/usr/local/etc/mysql/my.cnf.sample`，默认的配置文件理论上位于 `/usr/local/etc/mysql/my.cnf`（但默认为空）。
+
+可以这样：
+
+```sh
+# cp /usr/local/etc/mysql/my.cnf.sample /usr/local/etc/mysql/my.cnf
+```
+
+然后按需修改 `/usr/local/etc/mysql/my.cnf` 即可。
+
+在 `/etc/rc.conf` 中，写入
+
+```sh
+mysql_optfile="/abc/xyz.cnf"
+```
+
+可以改变配置文件路径。
+
