--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -33,7 +33,7 @@ $ npx mongosh mongodb://127.0.0.1:27017/
 ## 服务
 
 ```sh
-root@ykla:~ # sysrc mongod_enable="YES"
+root@ykla:~ # service mongod enable
 mongod_enable:  -> YES
 root@ykla:~ # service mongod start
 Starting mongod.
@@ -55,7 +55,7 @@ Ports 源里就有 mongosh，不需要额外操作。
 # cd /usr/ports/databases/mongosh/
 # make install clean
 ```
-### 链接 MongoDB
+### 测试链接 MongoDB
 
 ```sql
 root@ykla:~ # mongosh mongodb://127.0.0.1:27017/
@@ -81,3 +81,88 @@ test>
 ## 配置文件
 
 MongoDB 80 配置文件位于 `/usr/local/etc/mongodb.conf`，配置模板在 `/usr/local/etc/mongodb.conf.sample`。
+
+
+## 创建用户和密码
+
+首先开启密码验证：
+
+编辑 `/usr/local/etc/mongodb.conf`：
+
+删掉 `#security:` 前面的 `#`，然后在下行加入 `authorization: enabled`，即：
+
+```ini
+security:
+  authorization: enabled
+```
+
+重启服务：
+
+```sh
+# service mongod restart
+```
+
+
+```sql
+root@ykla:~ # mongosh mongodb://127.0.0.1:27017/
+Current Mongosh Log ID:	67bcb0e5337ba1c7d62d5665
+Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5
+Using MongoDB:		8.0.4
+Using Mongosh:		2.2.5
+mongosh 2.4.0 is available for download: https://www.mongodb.com/try/download/shell
+
+For mongosh info see: https://docs.mongodb.com/mongodb-shell/
+
+test> use admin // 使用数据库
+switched to db admin
+admin> db.createUser({ // 注意 ... 是自动生成的
+...   user: 'admin',    // 用户名（自定义）
+...   pwd: 'z',  // 密码（自定义）
+...   roles:[{
+...     role: 'root',   // 使用超级管理员
+...     db: 'admin'     // 指定数据库
+...   }]
+... })
+{ ok: 1 }
+admin> quit // 退出
+```
+## 登录方式
+
+### 登录方式①
+
+```sql
+root@ykla:~ # mongosh mongodb://127.0.0.1:27017/
+Current Mongosh Log ID:	67bcb1bafa0080a2132d5665
+Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5
+Using MongoDB:		8.0.4
+Using Mongosh:		2.2.5
+mongosh 2.4.0 is available for download: https://www.mongodb.com/try/download/shell
+
+For mongosh info see: https://docs.mongodb.com/mongodb-shell/
+
+test> use admin // 必须先指定数据库 admin
+switched to db admin
+admin> db.auth('admin', 'z') // 登录数据库
+{ ok: 1 }
+admin>
+```
+
+### 登录方式②
+
+```sql
+root@ykla:~ # mongosh -u admin -p z
+Current Mongosh Log ID:	67bcb200cbc3b601fb2d5665
+Connecting to:		mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5
+Using MongoDB:		8.0.4
+Using Mongosh:		2.2.5
+mongosh 2.4.0 is available for download: https://www.mongodb.com/try/download/shell
+
+For mongosh info see: https://docs.mongodb.com/mongodb-shell/
+
+test>
+```
+
+## 参考文献
+
+- [宝塔面板 使用MongoDB一些教程 PHP7](https://yooer.me/%E5%AE%9D%E5%A1%94%E9%9D%A2%E6%9D%BF-%E4%BD%BF%E7%94%A8mongodb%E4%B8%80%E4%BA%9B%E6%95%99%E7%A8%8B-php7.html)
+
