--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -116,16 +116,30 @@ For mongosh info see: https://docs.mongodb.com/mongodb-shell/
 test> use admin // 使用数据库
 switched to db admin
 admin> db.createUser({ // 注意 ... 是自动生成的
-...   user: 'admin',    // 用户名（自定义）
-...   pwd: 'z',  // 密码（自定义）
+...   user: 'admin',    // 自定义用户名
+...   pwd: 'z',  // 自定义密码，此处我设置密码为 z
 ...   roles:[{
-...     role: 'root',   // 使用超级管理员
+...     role: 'root',   // 使用超级管理员，可以管理所有数据库，拥有最高权限
 ...     db: 'admin'     // 指定数据库
 ...   }]
 ... })
 { ok: 1 }
 admin> quit // 退出
 ```
+
+你可以直接复制下面的文本到命令行中：
+
+```sql
+db.createUser({ 
+   user: 'admin2',    
+   pwd: 'z', 
+   roles:[{
+     role: 'root',   
+     db: 'admin'   
+   }]
+ })
+```
+
 ## 登录方式
 
 ### 登录方式①
