--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -178,5 +178,5 @@ test>
 
 ## 参考文献
 
-- [宝塔面板 使用MongoDB一些教程 PHP7](https://yooer.me/%E5%AE%9D%E5%A1%94%E9%9D%A2%E6%9D%BF-%E4%BD%BF%E7%94%A8mongodb%E4%B8%80%E4%BA%9B%E6%95%99%E7%A8%8B-php7.html)
-- [mongodb添加管理员和用户](https://chenyejun.github.io/blog/mongoDB/mongodbAddUser.html)
+- [宝塔面板 使用MongoDB一些教程 PHP7](https://yooer.me/%E5%AE%9D%E5%A1%94%E9%9D%A2%E6%9D%BF-%E4%BD%BF%E7%94%A8mongodb%E4%B8%80%E4%BA%9B%E6%95%99%E7%A8%8B-php7.html)，本文主要基于此
+- [mongodb添加管理员和用户](https://chenyejun.github.io/blog/mongoDB/mongodbAddUser.html)，各种角色划分参见此处
