--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -113,7 +113,11 @@ mongosh 2.4.0 is available for download: https://www.mongodb.com/try/download/sh
 
 For mongosh info see: https://docs.mongodb.com/mongodb-shell/
 
-test> use admin // 使用数据库
+test> show dbs
+admin   180.00 KiB
+config   92.00 KiB
+local    72.00 KiB
+test> use admin // 使用数据库 admin，你也可以创建新的数据库使用之
 switched to db admin
 admin> db.createUser({ // 注意 ... 是自动生成的
 ...   user: 'admin',    // 自定义用户名
