--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -85,22 +85,6 @@ MongoDB 80 配置文件位于 `/usr/local/etc/mongodb.conf`，配置模板在 `/
 
 ## 创建用户和密码
 
-首先开启密码验证：
-
-编辑 `/usr/local/etc/mongodb.conf`：
-
-删掉 `#security:` 前面的 `#`，然后在下行加入 `authorization: enabled`，即：
-
-```ini
-security:
-  authorization: enabled
-```
-
-重启服务：
-
-```sh
-# service mongod restart
-```
 
 
 ```sql
@@ -143,6 +127,24 @@ db.createUser({
    }]
  })
 ```
+
+然后开启密码验证：
+
+编辑 `/usr/local/etc/mongodb.conf`：
+
+删掉 `#security:` 前面的 `#`，然后在下行加入 `authorization: enabled`，即：
+
+```ini
+security:
+  authorization: enabled
+```
+
+重启服务：
+
+```sh
+# service mongod restart
+```
+
 
 ## 登录方式
 
