--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -119,7 +119,7 @@ admin> quit // 退出
 
 ```sql
 db.createUser({ 
-   user: 'admin2',    
+   user: 'admin',    
    pwd: 'z', 
    roles:[{
      role: 'root',   
