--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -27,6 +27,78 @@ chainloader /boot/boot1.efi
 grub-install: error: relocation 0x4 is not implemented yet.
 ```
 
+## EFI 分区删除与重建
+
+FreeBSD 默认的 EFI 是 fat16 的，重建后为 fat32。不确定会不会影响 4K 对齐。
+
+
+```sh
+root@ykla:/ # mount
+zroot/ROOT/default on / (zfs, local, noatime, nfsv4acls)
+devfs on /dev (devfs)
+/dev/gpt/efiboot0 on /boot/efi (msdosfs, local)
+zroot/tmp on /tmp (zfs, local, noatime, nosuid, nfsv4acls)
+zroot/home on /home (zfs, local, noatime, nfsv4acls)
+zroot/var/tmp on /var/tmp (zfs, local, noatime, nosuid, nfsv4acls)
+zroot on /zroot (zfs, local, noatime, nfsv4acls)
+zroot/var/crash on /var/crash (zfs, local, noatime, noexec, nosuid, nfsv4acls)
+zroot/var/log on /var/log (zfs, local, noatime, noexec, nosuid, nfsv4acls)
+zroot/var/audit on /var/audit (zfs, local, noatime, noexec, nosuid, nfsv4acls)
+zroot/usr/src on /usr/src (zfs, local, noatime, nfsv4acls)
+zroot/usr/ports on /usr/ports (zfs, local, noatime, nosuid, nfsv4acls)
+zroot/var/mail on /var/mail (zfs, local, nfsv4acls)
+zroot/home/ykla on /home/ykla (zfs, local, noatime, nfsv4acls)
+```
+检查文件系统
+```
+root@ykla:/ # fstyp /dev/nvd0p1
+msdosfs
+```
+
+必须先卸载才能格式化
+
+```
+root@ykla:/ # umount /boot/efi
+```
+尝试格式化为 fat32，由于文件簇不足，失败。
+```
+root@ykla:/ # newfs_msdos -F 32 /dev/nvd0p1
+newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525
+```
+
+```sh
+root@ykla:/ # gpart show
+=>       40  209715120  nda0  GPT  (100G)
+         40     532480     1  efi  (260M)
+     532520       1024     2  freebsd-boot  (512K)
+     533544        984        - free -  (492K)
+     534528    4194304     3  freebsd-swap  (2.0G)
+    4728832  204984320     4  freebsd-zfs  (98G)
+  209713152       2008        - free -  (1.0M)
+root@ykla:/ # gpart delete -i 1 nda0
+nda0p1 deleted
+root@ykla:/ # gpart show
+=>       40  209715120  nda0  GPT  (100G)
+         40     532480        - free -  (260M)
+     532520       1024     2  freebsd-boot  (512K)
+     533544        984        - free -  (492K)
+     534528    4194304     3  freebsd-swap  (2.0G)
+    4728832  204984320     4  freebsd-zfs  (98G)
+  209713152       2008        - free -  (1.0M)
+root@ykla:/ # gpart add -b 40 -s 260M -t ms-basic-data -i 1 nda0
+nda0p1 added
+root@ykla:/ # gpart show
+=>       40  209715120  nda0  GPT  (100G)
+         40     532480     1  ms-basic-data  (260M)
+     532520       1024     2  freebsd-boot  (512K)
+     533544        984        - free -  (492K)
+     534528    4194304     3  freebsd-swap  (2.0G)
+    4728832  204984320     4  freebsd-zfs  (98G)
+  209713152       2008        - free -  (1.0M)
+```
+
+
+
 ## UEFI 与 efibootmgr
 
 - 查看当前启动项：
