--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -66,6 +66,8 @@ root@ykla:/ # newfs_msdos -F 32 /dev/nvd0p1
 newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525
 ```
 
+调整大小看看：
+
 ```sh
 root@ykla:/ # gpart show
 =>       40  209715120  nda0  GPT  (100G)
@@ -75,7 +77,7 @@ root@ykla:/ # gpart show
      534528    4194304     3  freebsd-swap  (2.0G)
     4728832  204984320     4  freebsd-zfs  (98G)
   209713152       2008        - free -  (1.0M)
-root@ykla:/ # gpart delete -i 1 nda0
+root@ykla:/ # gpart delete -i 1 nda0 # 同上，必须先卸载才能删除！
 nda0p1 deleted
 root@ykla:/ # gpart show
 =>       40  209715120  nda0  GPT  (100G)
