--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -99,6 +99,13 @@ root@ykla:/ # gpart show
   209713152       2008        - free -  (1.0M)
 ```
 
+挂载：
+
+```sh
+root@ykla:~ # mount -t msdosfs /dev/nda0p1 /boot/efi
+```
+
+疑问：如何解决 `newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525`？
 
 
 ## UEFI 与 efibootmgr
