--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -103,6 +103,8 @@ root@ykla:/ # gpart show
 
 ```sh
 root@ykla:~ # mount -t msdosfs /dev/nda0p1 /boot/efi
+root@ykla:~ # cd /boot/efi/
+root@ykla:/boot/efi # mkdir efi # 创建 fat32 分区中的 efi 文件夹
 ```
 
 疑问：如何解决 `newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525`？
