--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -20,83 +20,92 @@ chainloader /boot/boot1.efi
 - [Working GRUB configuration for UEFI booting FreeBSD](https://unix.stackexchange.com/questions/354260/working-grub-configuration-for-uefi-booting-freebsd)
 - [Trying to boot FBSD13 via grub2](https://www.reddit.com/r/freebsd/comments/q4qgq9/trying_to_boot_fbsd13_via_grub2/)
 
-目前配置的报错报错（grub2-efi FBSD 13.1）：
+目前配置的报错报错（`grub2-efi` FBSD 14.2）：
 
 ```sh
 # grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
 grub-install: error: relocation 0x4 is not implemented yet.
+root@ykla:~ # grub-install --target=x86_64-efi --efi-directory=/boot/efi/efi/ --bootloader-id=grub --boot-directory=/boot/ --modules="part_gpt part_msdos bsd zfs"
+Installing for x86_64-efi platform.
+grub-install: error: unknown filesystem.
 ```
 
-## EFI 分区删除与重建
+加参数 `-vvv`，可以看到一长串报错。
 
-FreeBSD 默认的 EFI 是 fat16 的，重建后为 fat32。不确定会不会影响 4K 对齐。
+
+
+## EFI 分区删除与重建（存在疑问）
+
+FreeBSD 默认的 EFI 是 fat16 的，本次重建后为 fat32?
+
+>**注意**
+>
+>若在安装系统的时候，未选定 `gpt (UEFI)`，则 `gpart show` 会发现存在分区 `freebsd-boot  (512K)`。
 
 
 ```sh
-root@ykla:/ # mount
+root@ykla:~ # mount
 zroot/ROOT/default on / (zfs, local, noatime, nfsv4acls)
 devfs on /dev (devfs)
 /dev/gpt/efiboot0 on /boot/efi (msdosfs, local)
-zroot/tmp on /tmp (zfs, local, noatime, nosuid, nfsv4acls)
 zroot/home on /home (zfs, local, noatime, nfsv4acls)
-zroot/var/tmp on /var/tmp (zfs, local, noatime, nosuid, nfsv4acls)
-zroot on /zroot (zfs, local, noatime, nfsv4acls)
-zroot/var/crash on /var/crash (zfs, local, noatime, noexec, nosuid, nfsv4acls)
 zroot/var/log on /var/log (zfs, local, noatime, noexec, nosuid, nfsv4acls)
-zroot/var/audit on /var/audit (zfs, local, noatime, noexec, nosuid, nfsv4acls)
-zroot/usr/src on /usr/src (zfs, local, noatime, nfsv4acls)
+zroot/tmp on /tmp (zfs, local, noatime, nosuid, nfsv4acls)
 zroot/usr/ports on /usr/ports (zfs, local, noatime, nosuid, nfsv4acls)
+zroot on /zroot (zfs, local, noatime, nfsv4acls)
 zroot/var/mail on /var/mail (zfs, local, nfsv4acls)
+zroot/var/audit on /var/audit (zfs, local, noatime, noexec, nosuid, nfsv4acls)
+zroot/var/crash on /var/crash (zfs, local, noatime, noexec, nosuid, nfsv4acls)
+zroot/usr/src on /usr/src (zfs, local, noatime, nfsv4acls)
 zroot/home/ykla on /home/ykla (zfs, local, noatime, nfsv4acls)
+zroot/var/tmp on /var/tmp (zfs, local, noatime, nosuid, nfsv4acls)
 ```
+
 检查文件系统
+
 ```
 root@ykla:/ # fstyp /dev/nvd0p1
 msdosfs
 ```
 
-必须先卸载才能格式化
-
-```
-root@ykla:/ # umount /boot/efi
-```
-尝试格式化为 fat32，由于文件簇不足，失败。
-```
-root@ykla:/ # newfs_msdos -F 32 /dev/nvd0p1
-newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525
-```
-
 调整大小看看：
 
 ```sh
-root@ykla:/ # gpart show
-=>       40  209715120  nda0  GPT  (100G)
+root@ykla:~ # gpart show
+=>       40  125829040  nda0  GPT  (60G)
          40     532480     1  efi  (260M)
-     532520       1024     2  freebsd-boot  (512K)
-     533544        984        - free -  (492K)
-     534528    4194304     3  freebsd-swap  (2.0G)
-    4728832  204984320     4  freebsd-zfs  (98G)
-  209713152       2008        - free -  (1.0M)
-root@ykla:/ # gpart delete -i 1 nda0 # 同上，必须先卸载才能删除！
+     532520       2008        - free -  (1.0M)
+     534528    4194304     2  freebsd-swap  (2.0G)
+    4728832  121098240     3  freebsd-zfs  (58G)
+  125827072       2008        - free -  (1.0M)
+
+root@ykla:~ # umount /boot/efi # 必须先卸载才能删除！
+root@ykla:/ # gpart delete -i 1 nda0 
 nda0p1 deleted
-root@ykla:/ # gpart show
-=>       40  209715120  nda0  GPT  (100G)
-         40     532480        - free -  (260M)
-     532520       1024     2  freebsd-boot  (512K)
-     533544        984        - free -  (492K)
-     534528    4194304     3  freebsd-swap  (2.0G)
-    4728832  204984320     4  freebsd-zfs  (98G)
-  209713152       2008        - free -  (1.0M)
+root@ykla:~ # gpart show
+=>       40  125829040  nda0  GPT  (60G)
+         40     534488        - free -  (261M)
+     534528    4194304     2  freebsd-swap  (2.0G)
+    4728832  121098240     3  freebsd-zfs  (58G)
+  125827072       2008        - free -  (1.0M)
+
 root@ykla:/ # gpart add -b 40 -s 260M -t ms-basic-data -i 1 nda0
 nda0p1 added
-root@ykla:/ # gpart show
-=>       40  209715120  nda0  GPT  (100G)
+root@ykla:~ # gpart show
+=>       40  125829040  nda0  GPT  (60G)
          40     532480     1  ms-basic-data  (260M)
-     532520       1024     2  freebsd-boot  (512K)
-     533544        984        - free -  (492K)
-     534528    4194304     3  freebsd-swap  (2.0G)
-    4728832  204984320     4  freebsd-zfs  (98G)
-  209713152       2008        - free -  (1.0M)
+     532520       2008        - free -  (1.0M)
+     534528    4194304     2  freebsd-swap  (2.0G)
+    4728832  121098240     3  freebsd-zfs  (58G)
+  125827072       2008        - free -  (1.0M)
+
+```
+
+格式化为 fat32（`/dev/nvd0p1` 必须保持卸载状态）。但是若指定扇区似乎会影响 4K 对齐？
+
+```sh
+root@ykla:~ # newfs_msdos -F 32 /dev/nvd0p1
+newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525
 ```
 
 挂载：
@@ -107,7 +116,7 @@ root@ykla:~ # cd /boot/efi/
 root@ykla:/boot/efi # mkdir efi # 创建 fat32 分区中的 efi 文件夹
 ```
 
-疑问：如何解决 `newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525`？
+疑问：如何解决 `newfs_msdos: 16630 clusters too few clusters for FAT32, need 65525` ？
 
 
 ## UEFI 与 efibootmgr
