--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -30,7 +30,7 @@ Installing for x86_64-efi platform.
 grub-install: error: unknown filesystem.
 ```
 
-加参数 `-vvv`，可以看到一长串报错。
+加参数 `-vvv`，可以看到一长串报错。太长了，输出放在 <https://gist.github.com/ykla/9b6de6c8d4eee524840acb9981bf850a>
 
 
 
