--- a/di-19-zhang-wen-xue-gu-shi/19.7.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.7.md
@@ -28,6 +28,9 @@
 最近在 VMware Workstation 17 Pro 虚拟机上测试了 Ubuntu 24.04 LTS（伦敦当地时间 2024 年 4 月 25 日发布），可以说一代不如一代，安装的时候就开始不断地报错，并且 Bug 不断，窗口溢出、找不到鼠标光标、定位不到输入框……费劲安装后，开机更是各种内部错误接连不断（掐表数过了大概每 10 分钟会有 1 次）
 
  ![Ubuntu 24.04 内部错误](../.gitbook/assets/nbcw.jpg)
+ 
+ ![刚装好就挂的 Ubuntu 24.10](../.gitbook/assets/ubuntu24.10.png)
+ 
 
 ## Fedora
 
