--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.1-jie-apache.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.1-jie-apache.md
@@ -80,7 +80,7 @@ apache24 is running as pid 2068.
 
 ![Apache FreeBSD](../.gitbook/assets/Apache1.png)
 
-Apache 的配置文件在 `/usr/local/etc/apache24/httpd.conf`，示例文件在 `/usr/local/etc/apache24/httpd.conf.sample`。
+Apache 的配置文件在 `/usr/local/etc/apache24/httpd.conf`，示例文件在 `/usr/local/etc/apache24/httpd.conf.sample`。网站根目录在 `/usr/local/www/apache24/data/`。
 
 
 
