--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.2-jie-nginx.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.2-jie-nginx.md
@@ -2,33 +2,54 @@
 
 ## 安装
 
-- pkg: `# pkg install nginx`
+```
+# pkg install nginx
+```
 
 或
 
-- ports: `# cd /usr/ports/www/nginx/ && make install clean`
+```
+# cd /usr/ports/www/nginx/ 
+# make install clean
+```
 
 ### 查找相关的软件包
 
 - ports: `$ ls /usr/ports/www/ | grep nginx`
 - pkg: `$ pkg search -o nginx`
 
-## 配置
+
+## 启动
+
+```sh
+root@ykla:~ # service nginx enable
+nginx enabled in /etc/rc.conf
+root@ykla:~ # service nginx start
+Performing sanity check on nginx configuration:
+nginx: the configuration file /usr/local/etc/nginx/nginx.conf syntax is ok
+nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
+Starting nginx.
+```
+
+你可以通过 `sockstat -4 | grep nginx` 检查 nginx 是否启动并正常运行：
+
+```sh
+root@ykla:~ # sockstat -4 | grep nginx
+www      nginx       1154 6   tcp4   *:80                  *:*
+root     nginx       1153 6   tcp4   *:80                  *:*
+```
+
+## 浏览网页：
+
+本机打开 `localhost`，或者 `ip`，如 `http://192.168.179.150/`：
+
+![NGINX FreeBSD](../.gitbook/assets/nginx1.png)
+
+## 配置文件
 
 配置教程可参阅[官方文档](https://nginx.org/en/docs/) 与 [官方维基](https://wiki.nginx.org/Configuration)。
 
 本文仅简单说明 FreeBSD 中如何启动 Nginx 及 Nginx 的配置文件。
-
-### 启动
-
-```sh
-# sysrc nginx_enable=YES
-# service nginx start
-```
-
-你可以通过`$ sockstat -4 | grep nginx`检查 nginx 是否启动并正常运行。
-
-### 配置文件
 
 在 FreeBSD 中，Nginx 的配置文件位于 `/usr/local/etc/nginx/` 中，而主要的配置文件则在 `/usr/local/etc/nginx/nginx.conf`。
 
@@ -40,9 +61,9 @@ root	/usr/local/www/nginx;
 
 改成你想要的目录位置，例如 `root /path/to/new/webroot`
 
-## 示例文件（Nginx + Typecho 伪静态 + SSL）
+### 示例文件（Nginx + Typecho 伪静态 + SSL）
 
-```sh
+```ini
 #user  nobody;
 worker_processes  1;
 
