--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
@@ -143,3 +143,63 @@ You should add the following to your Apache configuration file:
 
 ## Nginx
 
+- 编辑 `/usr/local/etc/nginx/nginx.conf`：
+
+删掉下面行中的所有 `#`：
+
+```ini
+        #location ~ \.php$ {
+        #    root           html;
+        #    fastcgi_pass   127.0.0.1:9000;
+        #    fastcgi_index  index.php;
+        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+        #    include        fastcgi_params;
+        #}
+```
+
+并修改如下：
+
+```ini
+        location ~ \.php$ {
+            root           /usr/local/www/nginx; # 注意修改此处变成这样
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_index  index.php;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name; # 注意修改此处变成这样，$document_root 即网站路径
+            include        fastcgi_params;
+        }
+```
+
+- 编辑 `/usr/local/www/nginx/info.php`，加入
+
+```php
+<?php
+    phpinfo();
+?>
+```
+
+- 重启服务：
+
+```
+root@ykla:~ # service php_fpm restart
+Performing sanity check on php-fpm configuration:
+[25-Feb-2025 20:59:12] NOTICE: configuration file /usr/local/etc/php-fpm.conf test is successful
+Starting php_fpm.
+root@ykla:~ # service nginx restart
+Performing sanity check on nginx configuration:
+nginx: the configuration file /usr/local/etc/nginx/nginx.conf syntax is ok
+nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
+Stopping nginx.
+Waiting for PIDS: 1153.
+Performing sanity check on nginx configuration:
+nginx: the configuration file /usr/local/etc/nginx/nginx.conf syntax is ok
+nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
+Starting nginx.
+```
+
+访问 `ip/info.php`，如 `http://192.168.179.150/info.php`：
+
+![Apache PHP8 FreeBSD](../.gitbook/assets/php2.png)
+
+### 参考文献
+
+- [How to Install PHP and PHP-FPM on FreeBSD 14.0](https://docs.vultr.com/how-to-install-php-and-php-fpm-on-freebsd-14-0)。本文主要参考本文
