--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
@@ -141,7 +141,7 @@ You should add the following to your Apache configuration file:
 - [Apache and PHP](https://forums.freebsd.org/threads/apache-and-php.80625/)，此处提示要安装 `mod_php84`
 - [Install PHP 8.0 on FreeBSD 13 / FreeBSD 12](https://computingforgeeks.com/how-to-install-php-8-on-freebsd-system/)，文章主体框架在此
 
-## Nginx
+## 配置 Nginx
 
 - 编辑 `/usr/local/etc/nginx/nginx.conf`：
 
