--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
@@ -101,8 +101,9 @@ You should add the following to your Apache configuration file:
 
 ### 参考资料
 
-* [Install PHP 8.0 on FreeBSD 13 / FreeBSD 12](https://computingforgeeks.com/how-to-install-php-8-on-freebsd-system/)
-* [PHP-FPM(8)](https://man.freebsd.org/cgi/man.cgi?query=php-fpm)，man 页面
+- [Install PHP 8.0 on FreeBSD 13 / FreeBSD 12](https://computingforgeeks.com/how-to-install-php-8-on-freebsd-system/)
+- [PHP-FPM(8)](https://man.freebsd.org/cgi/man.cgi?query=php-fpm)，man 页面
+- [Apache and PHP](https://forums.freebsd.org/threads/apache-and-php.80625/)，此处提示要安装 `mod_php84`
 
 ## 配置 Apache
 
@@ -138,7 +139,6 @@ You should add the following to your Apache configuration file:
 
 ### 参考文献
 
-- [Apache and PHP](https://forums.freebsd.org/threads/apache-and-php.80625/)，此处提示要安装 `mod_php84`
 - [Install PHP 8.0 on FreeBSD 13 / FreeBSD 12](https://computingforgeeks.com/how-to-install-php-8-on-freebsd-system/)，文章主体框架在此
 
 ## 配置 Nginx
