--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -223,7 +223,7 @@ Alias /nextcloud /usr/local/www/nextcloud
 
 ## 启动
 
-`http://ip:nextcloud/i` 即可。请把 `ip` 替换成你的局域网 ip。
+`http://ip:nextcloud/` 即可。请把 `ip` 替换成你的局域网 ip。
 
 ![nextcloud FreeBSD 安装界面](../.gitbook/assets/nextclould1.png)
 
