--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -3,16 +3,8 @@
 
 ## 安装 nextcloud
 
->**注意**
->
->本文写作时（2024.11.1）Nextcloud 与 php84 尚不兼容，pkg 安装基于 `nextcloud-php84` 的 Nextcloud 会显示以下内容：
->
->```sh
->This version of Nextcloud is not compatible with PHP>=8.4.
->You are currently running 8.4.0RC3.
->```
 
-故，为了方便安装，请使用 Ports 而非 pkg：
+为了方便安装，请使用 Ports 而非 pkg：
 
 ```sh
 # cd /usr/ports/www/nextcloud/
@@ -31,6 +23,10 @@
 ## 安装配置 PostgreSQL
 
 安装（请留意上面 ports 默认安装的 `postgresql-client` 版本，尽量一致）
+
+>**注意**
+>
+>若使用 pkg 安装，请另行安装 `databases/php84-pgsql`，php 版本须同
  
 ```sh
 # pkg install postgresql16-server
@@ -199,7 +195,7 @@ As of Nextcloud 27.1.0 the recommended PHP version is 8.2.
 
 编辑 `/usr/local/etc/apache24/httpd.conf`，加入：
 
-```json
+```ini
 <FilesMatch "\.php$">
     SetHandler application/x-httpd-php
 </FilesMatch>
