--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -1,31 +1,117 @@
 # 第 17.8 节 PostgreSQL 与 pgAdmin4
 
-## PostgreSQL
+
 
 PostgreSQL 是一款自由的对象-关系型数据库，最早发布于 1989 年 6 月。 在 FreeBSD 上，提供多个大版本可选。在多方面均优于 mysql。
 
-### postgresql 安装示例（6 个版本均如此）
+## postgresql 安装示例（6 个版本均如此）
 
-#### 安装
+### 安装
 
 ```sh
-# pkg install -y postgresql96-server
+# pkg install -y postgresql16-server
 ```
 
 或者
 
 ```sh
-# cd /usr/ports/databases/postgresql96-server/ 
+# cd /usr/ports/databases/postgresql16-server/ 
 # make install clean
 ```
 
-#### 加入启动项
+查看安装后配置
 
 ```sh
-# sysrc postgresql_enable=YES
+root@ykla:~ # pkg info -D postgresql16-server
+postgresql16-server-16.7_1:
+On install:
+For procedural languages and postgresql functions, please note that
+you might have to update them when updating the server.
+
+If you have many tables and many clients running, consider raising
+kern.maxfiles using sysctl(8), or reconfigure your kernel
+appropriately.
+
+The port is set up to use autovacuum for new databases, but you might
+also want to vacuum and perhaps backup your database regularly. There
+is a periodic script, /usr/local/etc/periodic/daily/502.pgsql, that
+you may find useful. You can use it to backup and perform vacuum on all
+databases nightly. Per default, it performs `vacuum analyze'. See the
+script for instructions. For autovacuum settings, please review
+~postgres/data/postgresql.conf.
+
+If you plan to access your PostgreSQL server using ODBC, please
+consider running the SQL script /usr/local/share/postgresql/odbc.sql
+to get the functions required for ODBC compliance.
+
+Please note that if you use the rc script,
+/usr/local/etc/rc.d/postgresql, to initialize the database, unicode
+(UTF-8) will be used to store character data by default.  Set
+postgresql_initdb_flags or use login.conf settings described below to
+alter this behaviour. See the start rc script for more info.
+
+To set limits, environment stuff like locale and collation and other
+things, you can set up a class in /etc/login.conf before initializing
+the database. Add something similar to this to /etc/login.conf:
+---
+postgres:\
+	:lang=en_US.UTF-8:\
+	:setenv=LC_COLLATE=C:\
+	:tc=default:
+---
+and run `cap_mkdb /etc/login.conf'.
+Then add 'postgresql_login_class="postgres"' to /etc/rc.conf, or
+set it as the postgres user's login class in /etc/passwd.
+
+======================================================================
+
+To use PostgreSQL, enable it in rc.conf using
+
+  sysrc postgresql_enable=yes
+
+To initialize the database, run
+
+  service postgresql initdb
+
+You can then start PostgreSQL by running:
+
+  service postgresql start
+
+For postmaster settings, see ~postgres/data/postgresql.conf
+
+NB. FreeBSD's PostgreSQL port logs to syslog by default
+    See ~postgres/data/postgresql.conf for more info
+
+NB. If you're not using a checksumming filesystem like ZFS, you might
+    wish to enable data checksumming. It can be enabled during
+    the initdb phase, by adding the "--data-checksums" flag to
+    the postgresql_initdb_flags rcvar. Otherwise you can enable it later by
+    using pg_checksums.  Check the initdb(1) manpage for more info
+    and make sure you understand the performance implications.
+
+======================================================================
+
+SECURITY ADVICE
+
+If upgrading from a version 16.x < 16.3
+A security vulnerability was found in the system views pg_stats_ext
+and pg_stats_ext_exprs, potentially allowing authenticated database
+users to see data they shouldn't.  If this is of concern in your
+installation, run the SQL script /usr/local/share/postgresql/fix-CVE-2024-4317.sql
+for each of your databases. For details, see
+https://www.postgresql.org/support/security/CVE-2024-4317/
+
+root@ykla:~ #
 ```
 
-#### 初始化数据库
+### 加入启动项
+
+```sh
+# service postgresql enable
+```
+
+
+### 初始化数据库
 
 ```sh
 /usr/local/etc/rc.d/postgresql initdb
@@ -66,12 +152,10 @@ You can change this by editing pg_hba.conf or using the option -A, or
 
 Success. You can now start the database server using:
 
-    /usr/local/bin/pg_ctl -D /var/db/postgres/data96 -l logfile start
-
-root@ykla:~ #
+    /usr/local/bin/pg_ctl -D /var/db/postgres/data16 -l logfile start
 ```
 
-#### 登录使用
+### 登录使用
 
 Postgresql 默认是没有 root 用户的，需要使用其创建的用户 `postgres` 登录。
 
@@ -100,7 +184,7 @@ $
 $ createdb new_db
 #登录进数据库并将数据库权限赋予用户 ykla。
 $ psql
-psql (9.6.24)
+psql (16.7)
 Type "help" for help.
 
 postgres=# ALTER USER ykla WITH ENCRYPTED PASSWORD 'password';
